--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:elevation="8dp">
+            android:elevation="8dp"
+            app:cardBackgroundColor="@color/teal_200">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -25,7 +26,7 @@
 
                 <ImageView
                     android:id="@+id/card_image_ml"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:src="@drawable/ml" />
 
@@ -33,7 +34,6 @@
                     style="@style/TextAppearance.AppCompat.Large"
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
-                    android:background="@drawable/bg"
                     android:gravity="center"
                     android:text="@string/formula"
                     android:textColor="@color/white"
